<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_main"
          android:title="@string/main"
          android:icon="@drawable/ic_home"
          app:showAsAction="never" />

    <item android:id="@+id/menu_paycheck_query"
          android:title="@string/paycheckQuery"
          android:icon="@drawable/ic_coin"
          app:showAsAction="always" />

    <item android:id="@+id/menu_paycheck_saved"
          android:title="@string/paycheckSaved"
          android:icon="@drawable/ic_folder_download"
          app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_logout"
          android:title="@string/logout"
          android:icon="@drawable/ic_logout"
          app:showAsAction="never" />

</menu>