<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar and user fragment -->
    <include layout="@layout/layout_top" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/portalBox"
        android:layout_margin="10dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="0"
                android:stretchColumns="1"
                style="@style/portalDefaultTable">

                <TableRow style="@style/portalDefaultTable.Row">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        style="@style/portalDefaultTable.Text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        style="@style/portalDefaultTable.Text"/>

                </TableRow>

                <TableRow style="@style/portalDefaultTable.Row">

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:freezesText="true"
                        android:text="@string/year"
                        android:hint="@string/selectYear"
                        android:contentDescription="@string/selectYear"
                        style="@style/portalDefaultTableInput" />

                    <TextView
                        android:id="@+id/month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:freezesText="true"
                        android:text="@string/month"
                        android:hint="@string/selectMonth"
                        android:contentDescription="@string/selectMonth"
                        style="@style/portalDefaultTableInput"/>

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payroll"
                style="@style/portalDefaultTable.Text"/>

            <TextView
                android:id="@+id/payroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:freezesText="true"
                android:text="@string/payroll"
                android:hint="@string/selectPayroll"
                android:contentDescription="@string/selectPayroll"
                style="@style/portalDefaultTableInput"/>

            <Button
                android:id="@+id/button_paycheck_query"
                android:text="@string/query"
                android:hint="@string/clickToQueryThePaycheck"
                android:contentDescription="@string/clickToQueryThePaycheck"
                style="@style/portalButton"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mb"
                style="@style/portalMessageBox">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_information"
                        android:id="@+id/mb_icon"/>

                    <android.support.v7.widget.LinearLayoutCompat
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mb_message">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/mb_message_title"
                            style="@style/portalMessageBoxTitle"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/mb_message_text"
                            style="@style/portalMessageBoxText"/>
                    </android.support.v7.widget.LinearLayoutCompat>

                </android.support.v7.widget.LinearLayoutCompat>

            </FrameLayout>

        </android.support.v7.widget.LinearLayoutCompat>

    </FrameLayout>

</android.support.v7.widget.LinearLayoutCompat>
